--- a/Draft/assets-2/style.css
+++ b/Draft/assets-2/style.css
@@ -91,7 +91,7 @@ button:hover{
 /*News and other var*/
 .all-news{
     --gap: 16px;
-    --num-cols: 4;
+    --num-cols: 2;
     --row-height: 300px;
     list-style: none;
     box-sizing: border-box;
@@ -108,18 +108,14 @@ button:hover{
     object-fit: cover;
 }
 
+h2{
+    text-align: center;
+}
 /*News media size*/
 @media screen and (max-width: 1024px) {
     .all-news{
-        --num-cols: 2;
-        --row-height: 200px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .all-news{
         --num-cols: 1;
-        --row-height: 250px;
+        --row-height: 200px;
     }
 }
 
