--- a/Draft/assets3/assets/style.css
+++ b/Draft/assets3/assets/style.css
@@ -55,45 +55,47 @@
  .picture {
      margin-top: 40px ;
  }
+
 /* Dropdown */
 
 ul{
     list-style:none;
     background:#9B0000;
-    }
-    ul li{
+}
+
+ul li{
     display:inline-block;
     position:relative;
-    }
-    ul li a{
+}
+
+ul li a{
     display:block;
     padding:20px 25px;
     color:#FFF;
     text-decoration:none;
     text-align:center;
     font-size:20px;
-    }
+}
 
-    ul li ul.dropdown li{
+ul li ul.dropdown li{
     display:block;
-        }
+}
         
-    ul li ul.dropdown{
-        width:100%;
-        background:#22438C;
-        position:absolute;
-        z-index:999;
-        display:none;
-        }
-    ul lia:hover{
-        background:#112C66;
-            }
+ul li ul.dropdown{
+    width:100%;
+    background:#650101; 
+    position:absolute;
+    z-index:999;
+    display:none;
+}
+
+ul li a:hover{
+    background:#650101;
+}
         
-    ul li:hover ul.dropdown{
-            display:block;
-            }
-
-
+ul li:hover ul.dropdown{
+    display:block;
+}
 
  /* Footer */
 
