--- a/Draft/assets3/assets/style.css
+++ b/Draft/assets3/assets/style.css
@@ -2,10 +2,90 @@
 
 .nav-wrapper{
     background-color: #9B0000;
+    padding-bottom: 10px;
+
 }
 
 .fnavbar{
     margin: 10px ;
+    background-color: #9B0000;
+}
+
+.navbar-right{
+    padding:0px;
+    margin: 0px;
+    border: 0px;
+
+}
+
+.material-icons{
+    display: inline;
+
+}
+
+.navbar-main{
+    padding-bottom: 75px;
+    background-color: #9B0000;
+}
+
+/* Search box */
+
+.container3{
+    margin: 10px;
+    width: 200px;
+}
+
+button{
+    padding: 5px 12px;
+}
+
+button:active{
+    background:#C15050;
+}
+
+button:focus{
+    background:#C15050;
+}
+
+
+/* Dropdown */
+
+ul{
+    list-style:none;
+    background:#9B0000;
+}
+
+ul li{
+    display:inline-block;
+    position:relative;
+}
+
+ul li a{
+    display:block;
+    padding:10px 30px;
+    color:#FFF;
+    text-decoration:none;
+    text-align:center;
+    font-size:17px;
+}
+
+ul li ul.dropdown li{
+    display:block;
+}
+        
+ul li ul.dropdown{
+    width:100%;
+    background:#650101; 
+    position:absolute;
+    display:none;
+}
+
+ul li a:hover{
+    background:#650101;
+}
+        
+ul li:hover ul.dropdown{
+    display:block;
 }
 
 /* Body */
@@ -56,49 +136,9 @@
      margin-top: 40px ;
  }
 
-/* Dropdown */
-
-ul{
-    list-style:none;
-    background:#9B0000;
-}
-
-ul li{
-    display:inline-block;
-    position:relative;
-}
-
-ul li a{
-    display:block;
-    padding:20px 25px;
-    color:#FFF;
-    text-decoration:none;
-    text-align:center;
-    font-size:20px;
-}
-
-ul li ul.dropdown li{
-    display:block;
-}
-        
-ul li ul.dropdown{
-    width:100%;
-    background:#650101; 
-    position:absolute;
-    z-index:999;
-    display:none;
-}
-
-ul li a:hover{
-    background:#650101;
-}
-        
-ul li:hover ul.dropdown{
-    display:block;
-}
-
  /* Footer */
 
  .footer-one{
      background: #9B0000;
  }
+
